kubernetes/apps/observability/dashboards/grafana/instance/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Grafana
    gethomepage.dev/description: Observability Dashboard
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: grafana.png
spec:
  hostnames:
    - grafana.${DOMAIN1}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
